--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,7 @@
-build:
- image: node:6.7
- commands:
- - npm install
+publish:
+  docker:
+  username: $$DOCKER_USER
+  password: $$DOCKER_PASS
+  email: $$DOCKER_EMAIL
+  repo: wizni/express
+  tag: latest
