--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,8 @@
 publish:
-  docker:
-   username: $$DOCKER_USER
-   password: $$DOCKER_PASS
-   email: $$DOCKER_EMAIL
-   repo: wizni/express
-   tag: latest
+    docker:
+        repo: wizehub/kapaggar_express-angular
+        username: $$DOCKER_USER
+        password: $$DOCKER_PASS
+        email: $$DOCKER_EMAIL
+        tag: master
+        insecure: false
